# solana-casino-jackpot

./: .gitignore  Anchor.toml  README.md  package.json
cli/: command.ts  scripts.ts  utils.ts
idl/: jackpot_smart_contract.json  jackpot_smart_contract.ts
lib/: constant.ts  scripts.ts  util.ts
programs/jackpot_smart_contract/: Cargo.toml
programs/jackpot_smart_contract/src/: constants.rs  errors.rs  lib.rs  misc.rs  utils.rs
programs/jackpot_smart_contract/src/instructions/: mod.rs
programs/jackpot_smart_contract/src/instructions/admin/: configure.rs  create_game.rs  mod.rs  set_winner.rs
programs/jackpot_smart_contract/src/instructions/user/: claim_reward.rs  join_game.rs  mod.rs
programs/jackpot_smart_contract/src/state/: config.rs  gameground.rs  mod.rs
